# ease

./: .dockerignore  .env.example  .env.production  .gitignore  CALENDAR_DEBUG.md  DATABASE_MIGRATION_FIX.md  DEV_SKIP_BUTTON_COMPLETE.md  DEV_SKIP_BUTTON_FIX.md  DS4_COMPLETE.md  DS4_IMPLEMENTATION_SUMMARY.md  Dockerfile  GIT_SYNC_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MENSTRUAL_PHASE_REMOVAL.md  MENSTRUAL_PHASE_REMOVAL_QUICK_REF.md  MERGE_COMPLETE.md  MIGRAINE_INTEGRATION_COMPLETE.md  ONBOARDING_PERSONAL_DETAILS_IMPROVEMENTS.md  README.md  RISK_FACTORS_DATA_SOURCE.md  SOOTHEMODE_FINAL_IMPLEMENTATION.md  SOOTHEMODE_PERSONALIZATION_PLAN.md  SOOTHEMODE_TESTING.md  TESTING_MIGRAINE_FEATURE.md  TRIGGER_HYPOTHESES_IMPLEMENTATION_COMPLETE.md  TRIGGER_HYPOTHESES_INTEGRATION.md  TRIGGER_HYPOTHESES_QUICK_REF.md  UPDATES_COMPARISON.md  docker-compose.production.yml  docker-compose.yml  env-substitution.sh  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
ALINE/: .dockerignore.service  .env.example  .gcloudignore  .gitignore  CLOUD_DEPLOY.md  Dockerfile  Dockerfile.service  Makefile  README.md  SETUP_CHECKLIST.md  TRAINING_DEBUG.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-deployment.sh
ALINE/configs/: model.yaml  policy.yaml  service.yaml  simulator.yaml  train.yaml
ALINE/data/: aline.db  create_sample_data.py  feature_order.yaml  priors.yaml
ALINE/docs/: 00_overview.md  01_implementing_ALINE.md  API_REFERENCE.md  BACKEND_FRONTEND_INTEGRATION_STATUS.md  BACKEND_RISK_INTEGRATION.md  CALENDAR_INTEGRATION_QUICKSTART.md  DELEGATION_PACKAGE.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DS4_UPDATES_ANALYSIS.md  FEATURE_ENHANCEMENT_SUMMARY.md  GIT_MERGE_RESOLUTION.md  GOOGLE_CLOUD_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  MIGRAINE_REPORT_IMPLEMENTATION.md  MIGRAINE_TRACKING_INTEGRATION.md  (+12 more)
(+187 files in other folders)
